--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 button {
-    background-color: rgb(181, 207, 185);
-    font-size: 1.2em;
+    background-color: rgb(84, 53, 71);
+    font-size: 1.4em;
     font-weight: bold;
+    color: white;
     margin: 0.4em;
-    width:4.25em;
-    height: 4.6em;
+    width: 3.5em;
+    height: 3.5em;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
 }
 
+button:active {
+    background-color: rgb(47, 30, 40);
+}
+
 #res {
     text-align: right;
-    background-color: rgb(219, 232, 248);
+    background-color: rgb(203, 245, 241);
     margin: 0.2em;
+    margin-bottom: 0.5em;
     font-size: 3.5em;
-    width:auto;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 94%;
+    max-width: 94%;
+    word-wrap: break-word;
     border: 1px solid gray;
     border-radius: 10px;
 }
@@ -22,8 +31,9 @@ button {
 .calc {
     border: 2px solid black;
     border-radius: 10px;
-    background-color: rgb(148, 255, 255);
+    background-color: rgb(56, 58, 86);
     width: 25em;
-    padding:0.2em;
-    padding-bottom: 0.4em;
+    padding: 1em;
+    padding-bottom: 1.5em;
+    margin: 1em;
 }
